--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>NULL</title>
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles.css">
 </head>
 
 <body>
