--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>NULL</title>
 
     <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="account.css">
 </head>
 
 <body>
