--- a/MarketPlace.html
+++ b/MarketPlace.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>NULL</title>
-
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="Styles.css">    
+    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="account.css">
 </head>
 
 <body>
